# nct

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  bootstrap.sh  config.h.in  configure  configure.ac  configure.in  nct.c  nct.h  nct.lsm  nct.spec  score.c  score.h
m4/: .gitignore  Makefile.am  gnulib-cache.m4
src/: Makefile.am  nct.c  score.c  score.h
